# react-fastapi-skeleton

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  nginx.conf  vite.config.ts
frontend/src/: App.jsx  App.tsx
